katars/tests/snaps/snapshots/snap_errors__struct_missing_field.snap
---
source: katars/tests/snaps/errors.rs
expression: "helpers::run_error(\"kind P { x: Int, y: Int }\\nP { x: 1 }\")"
---
Error: missing field 'y' in 'P' construction
   ╭─[<test>:2:1]
   │
 2 │ P { x: 1 }
   │ ─────┬────  
   │      ╰────── missing field 'y' in 'P' construction
───╯
